# apple-scanner

./: .gitignore  APPLE_SCANNER_OVERHAUL_PROMPT.md  BUILD_PROMPT.md  SPRINT3_FIX_PROMPT.md  SPRINT4_FIX_PROMPT.md  logs from latest session v1.md
apple-caliber-scan/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  OVERHAUL_SPRINT2.md  README.md  SCANNER_ALTERNATIVES.md  pyproject.toml
apple-caliber-scan/.claude/agents/: docs-reviewer.md  implementation-reviewer.md  security-privacy-reviewer.md  test-engineer.md
apple-caliber-scan/.claude/commands/: adversarial-review.md  lint.md  review.md  run-local.md  smoke.md  test.md
apple-caliber-scan/apple_caliber_scan/: __init__.py  __main__.py  config.py
apple-caliber-scan/brain/: NorthStar.md
apple-caliber-scan/docs/: ACCURACY_METHODOLOGY.md  ARCHITECTURE.md  ARCHITECTURE_GRAPH_SUMMARY.md  BASELINE_TEST_RESULTS.md  CAPTURE_GUIDE.md  DEPLOYMENT.md  EVIDENCE_LEDGER.md  IMPLEMENTATION_PLAN.md  LIMITATIONS.md  NON_REPO_TOOL_IMPLEMENTATION.md  RELEASE_CHECKLIST.md  REQUIREMENTS_TRACEABILITY.md  RTK_VERIFICATION.md  SECURITY_PRIVACY.md  TESTING.md  TOOLING_COVERAGE_MATRIX.md  ULTRAPLAN.md  USER_MANUAL.md
apple-caliber-scan/sample_data/: example_report_pl.html
apple-caliber-scan/tests/: conftest.py  test_caliber.py  test_calibration.py  test_deletebatch_privacy.py  test_detector.py  test_drive.py  test_estimation.py  test_ingest.py  test_normalizer.py  test_preview.py  test_report_disclaimers.py  test_report_polish_only.py  test_reporting.py  test_scan_file_lifecycle.py  test_secret_redaction.py  test_web.py
(+42 files in other folders)
