[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-caliber-scan"
version = "0.1.0"
description = "Apple caliber analysis system for Polish apple trade — Freshora Sp. Z. o. o."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.28.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "plyfile>=1.0.3",
    "trimesh>=4.3.0",
    "weasyprint>=62.0",
    "Jinja2>=3.1.4",
    "gdown>=5.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
las = ["laspy>=2.5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apple_caliber_scan*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
